Fixing spacing of floating card children

--- a/src/components/FloatingCard.scss
+++ b/src/components/FloatingCard.scss
@@ -57,6 +57,6 @@
     grid-row: 3 / 4;
     grid-column: 1 / 3;
 
-    margin: 0.5rem auto;
+    margin: 0 auto;
   }
 }
